--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azkar",
+  "name": "Quran Pot",
   "version": "1.0.0",
   "engines": {
     "node": "16.14.2",
@@ -14,13 +14,10 @@
   "author": "Mohamed Ahmed",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.16",
     "twitter-api-v2": "^1.12.0"
   }
