--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
+    "pug": "^3.0.2",
     "twitter-api-v2": "^1.12.0"
   }
 }
